--- a/config
+++ b/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec terminal
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_recency
+# bindsym $mod+d exec --no-startup-id dmenu_recency
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -73,10 +73,10 @@ bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 # focus_follows_mouse no
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+# bindsym $mod+j focus left
+# bindsym $mod+k focus down
+# bindsym $mod+l focus up
+# bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -104,7 +104,7 @@ bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_
 # split orientation
 bindsym $mod+h split h;exec notify-send 'tile horizontally'
 bindsym $mod+v split v;exec notify-send 'tile vertically'
-bindsym $mod+q split toggle
+# bindsym $mod+q split toggle
 
 # toggle fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -149,6 +149,8 @@ set $ws5 5
 set $ws6 6
 set $ws7 7
 set $ws8 8
+set $ws9 9
+set $ws0 0
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -159,6 +161,8 @@ bindsym $mod+5 workspace $ws5
 bindsym $mod+6 workspace $ws6
 bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws0
 
 # Move focused container to workspace
 bindsym $mod+Ctrl+1 move container to workspace $ws1
@@ -169,6 +173,9 @@ bindsym $mod+Ctrl+5 move container to workspace $ws5
 bindsym $mod+Ctrl+6 move container to workspace $ws6
 bindsym $mod+Ctrl+7 move container to workspace $ws7
 bindsym $mod+Ctrl+8 move container to workspace $ws8
+bindsym $mod+Ctrl+9 move container to workspace $ws9
+bindsym $mod+Ctrl+0 move container to workspace $ws0
+
 
 # Move to workspace with focused container
 bindsym $mod+Shift+1 move container to workspace $ws1; workspace $ws1
@@ -179,6 +186,8 @@ bindsym $mod+Shift+5 move container to workspace $ws5; workspace $ws5
 bindsym $mod+Shift+6 move container to workspace $ws6; workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9; workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws0; workspace $ws0
 
 # Open applications on specific workspaces
 # assign [class="Thunderbird"] $ws1
@@ -228,7 +237,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # Set shut down, restart and locking features
-bindsym $mod+0 mode "$mode_system"
+# bindsym $mod+0 mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id i3exit lock, mode "default"
@@ -269,7 +278,7 @@ mode "resize" {
 }
 
 # Lock screen
-bindsym $mod+9 exec --no-startup-id blurlock
+bindsym $mod+l exec --no-startup-id blurlock --show-failed-attempts
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -365,8 +374,8 @@ bindsym $mod+m bar mode toggle
 #############################
 
 # Set inner/outer gaps
-gaps inner 14
-gaps outer -2
+gaps inner 0
+gaps outer 0
 
 # Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
 # gaps inner|outer current|all set|plus|minus <px>
@@ -416,3 +425,64 @@ mode "$mode_gaps_outer" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
+
+### CUSTOM ###
+
+####################################################
+###################  Настраиваем  ##################
+####################################################
+set $Alt Mod1
+
+# Мышка не делает окна активными при наведении
+focus_follows_mouse no
+
+# workspace по-умолчанию
+# assign [class="firefox"] 1
+assign [class="goland"] 2
+assign [class="Telegram"] 8
+
+# Толщина границ окон и title on\off
+for_window [class="Telegram"] border none
+for_window [class="Firefox"] border none
+
+####################################################
+###################  Запускаем  ###################
+####################################################
+
+# Переключение языков по Shift+Alt
+exec_always "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
+
+# Автозапуск приложений
+#exec firefox
+exec --no-startup-id telegram
+
+
+####################################################
+#####################  Биндим  #####################
+####################################################
+
+
+# Быстрое открытие конфига i3
+bindsym Control+$mod+$Alt+e exec "code ~/.i3/config"
+
+# Скриншотер
+# bindsym Control+$Alt+D "exec xfce4-screenshooter"
+bindsym Control+$Alt+D "exec flameshot gui"
+
+bindsym $mod+q exec "thunar"
+bindsym Control+$mod+$Alt+p exec pavucontrol
+
+bindsym --release Control+$mod+$Alt+x exec xkill
+
+bindsym Control+$mod+$Alt+f exec "pkill -9 -f firefox"
+
+bindsym $Alt+1 exec "amixer set Master 5%+"
+bindsym $Alt+2 exec "amixer set Master 5%-"
+bindsym $Alt+q exec "amixer set Master toggle & amixer set Front unmute & amixer set Surround unmute & amixer set Center unmute & amixer set LFE unmute"
+
+# Заменяем dmenu на rofi
+bindsym $mod+d exec rofi -show run
+
+bindsym $mod+grave workspace back_and_forth
+
+exec_always "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
