--- a/config
+++ b/config
@@ -442,7 +442,8 @@ for_window [class="Firefox"] border none
 exec_always "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
 
 # Автозапуск приложений
-#exec firefox
+exec firefox
+exec Telegram
 exec --no-startup-id telegram
 
 
@@ -467,7 +468,7 @@ bindsym Control+$mod+$Alt+f exec "pkill -9 -f firefox"
 
 bindsym $Alt+1 exec "amixer set Master 5%+"
 bindsym $Alt+2 exec "amixer set Master 5%-"
-bindsym $Alt+q exec "amixer set Master toggle & amixer set Front unmute & amixer set Surround unmute & amixer set Center unmute & amixer set LFE unmute"
+bindsym $Alt+q exec "amixer -q -D pulse sset Master toggle"
 
 # Заменяем dmenu на rofi
 bindsym $mod+d exec rofi -show run
