--- a/config
+++ b/config
@@ -428,6 +428,7 @@ focus_follows_mouse no
 # assign [class="firefox"] 1
 assign [class="goland"] 2
 assign [class="Telegram"] 8
+assign [class="obsidian"] 9
 
 # Толщина границ окон и title on\off
 for_window [class="Telegram"] border none
@@ -444,6 +445,8 @@ exec_always "setxkbmap -layout us,ru -option 'grp:alt_shift_toggle'"
 
 # Автозапуск приложений
 exec firefox
+exec obsidian
+exec goland
 exec Telegram
 exec --no-startup-id telegram
 
